# Sapient

./: .replit  app.py  app_streamlit.py  models.py  package-lock.json  package.json  portfolio_optimizer.py  pyproject.toml  replit.md  run_dev.py  server.py  start.sh  stock_data.py  technical_indicators.py  utils.py
backend/: auth_utils.py  database.py  main.py
backend/routers/: auth.py  indicators.py  portfolio.py  stocks.py
backend/schemas/: auth.py  indicators.py  portfolio.py  stocks.py
core/: __init__.py  capm.py  database.py  fundamentals.py  indicators.py  optimizer.py  stocks.py
frontend/: package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  auth.tsx  theme.tsx
frontend/src/pages/: AutoBuilder.tsx  CAPMBuilder.tsx  Dashboard.tsx  FundamentalsBuilder.tsx  Login.tsx  ManualBuilder.tsx  PortfolioDetail.tsx  Portfolios.tsx  Register.tsx  Settings.tsx  StockAnalysis.tsx
frontend/src/types/: index.ts
