[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "reportlab>=4.4.4",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.40.0",
    "yfinance>=0.2.66",
]
